// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`do-push-subscribe empty values for folders and non-empty for tabs: pass default values 1`] = `
Array [
  "/v2/subscribe/webpush",
  Object {
    "filter": "{\\"rules\\":[{\\"if\\":\\"NewMessage & Inbox & Tabs\\",\\"do\\":\\"send_bright\\"},{\\"if\\":\\"NewMessage & InboxFolders\\",\\"do\\":\\"send_bright\\"},{\\"do\\":\\"skip\\"}],\\"vars\\":{\\"NewMessage\\":{\\"$event\\":[\\"insert\\"]},\\"InboxFolders\\":{\\"fid\\":{\\"$eq\\":[\\"-42\\"]}},\\"Tabs\\":{\\"tab\\":{\\"$eq\\":[\\"social\\"]}},\\"Inbox\\":{\\"fid\\":{\\"$eq\\":[\\"1\\"]}}}}",
    "service": "mail",
    "session": "d41d8cd98f00b204e9800998ecf8427e",
  },
  Object {
    "body": Object {
      "subscription": "{\\"endpoint\\":\\"\\",\\"expirationTime\\":null,\\"keys\\":{\\"p26dh\\":\\"BB\\",\\"auth\\":\\"BRQ\\"}}",
    },
  },
]
`;

exports[`do-push-subscribe empty values for folders and tabs: pass default values 1`] = `
Array [
  "/v2/subscribe/webpush",
  Object {
    "filter": "{\\"rules\\":[{\\"if\\":\\"NewMessage & Inbox & Tabs\\",\\"do\\":\\"send_bright\\"},{\\"if\\":\\"NewMessage & InboxFolders\\",\\"do\\":\\"send_bright\\"},{\\"do\\":\\"skip\\"}],\\"vars\\":{\\"NewMessage\\":{\\"$event\\":[\\"insert\\"]},\\"InboxFolders\\":{\\"fid\\":{\\"$eq\\":[\\"-42\\"]}},\\"Tabs\\":{\\"tab\\":{\\"$eq\\":[\\"\\"]}},\\"Inbox\\":{\\"fid\\":{\\"$eq\\":[\\"1\\"]}}}}",
    "service": "mail",
    "session": "d41d8cd98f00b204e9800998ecf8427e",
  },
  Object {
    "body": Object {
      "subscription": "{\\"endpoint\\":\\"\\",\\"expirationTime\\":null,\\"keys\\":{\\"p26dh\\":\\"BB\\",\\"auth\\":\\"BRQ\\"}}",
    },
  },
]
`;

exports[`do-push-subscribe empty values for tabs and non-empty for folders: pass default values 1`] = `
Array [
  "/v2/subscribe/webpush",
  Object {
    "filter": "{\\"rules\\":[{\\"if\\":\\"NewMessage & Inbox & Tabs\\",\\"do\\":\\"send_bright\\"},{\\"if\\":\\"NewMessage & InboxFolders\\",\\"do\\":\\"send_bright\\"},{\\"do\\":\\"skip\\"}],\\"vars\\":{\\"NewMessage\\":{\\"$event\\":[\\"insert\\"]},\\"InboxFolders\\":{\\"fid\\":{\\"$eq\\":[\\"113\\"]}},\\"Tabs\\":{\\"tab\\":{\\"$eq\\":[\\"\\"]}},\\"Inbox\\":{\\"fid\\":{\\"$eq\\":[\\"1\\"]}}}}",
    "service": "mail",
    "session": "d41d8cd98f00b204e9800998ecf8427e",
  },
  Object {
    "body": Object {
      "subscription": "{\\"endpoint\\":\\"\\",\\"expirationTime\\":null,\\"keys\\":{\\"p26dh\\":\\"BB\\",\\"auth\\":\\"BRQ\\"}}",
    },
  },
]
`;

exports[`do-push-subscribe if has calendar sid, then subscribe push from calendar 1`] = `
Array [
  "/v2/subscribe/webpush",
  Object {
    "filter": "{\\"rules\\":[{\\"if\\":\\"MeetingReminder\\",\\"do\\":\\"send_bright\\"},{\\"do\\":\\"skip\\"}],\\"vars\\":{\\"MeetingReminder\\":{\\"$event\\":[\\"meeting-reminder\\"]}}}",
    "service": "calendar",
    "session": "d41d8cd98f00b204e9800998ecf8427e",
  },
  Object {
    "body": Object {
      "subscription": "{\\"endpoint\\":\\"\\",\\"expirationTime\\":null,\\"keys\\":{\\"p26dh\\":\\"BB\\",\\"auth\\":\\"BRQ\\"}}",
    },
  },
]
`;

exports[`do-push-subscribe if has calendar sid, then subscribe push from calendar 2`] = `
Array [
  "/v2/subscribe/webpush",
  Object {
    "filter": "{\\"rules\\":[{\\"if\\":\\"NewMessage & Inbox & Tabs\\",\\"do\\":\\"send_bright\\"},{\\"if\\":\\"NewMessage & InboxFolders\\",\\"do\\":\\"send_bright\\"},{\\"do\\":\\"skip\\"}],\\"vars\\":{\\"NewMessage\\":{\\"$event\\":[\\"insert\\"]},\\"InboxFolders\\":{\\"fid\\":{\\"$eq\\":[\\"113\\"]}},\\"Tabs\\":{\\"tab\\":{\\"$eq\\":[\\"\\"]}},\\"Inbox\\":{\\"fid\\":{\\"$eq\\":[\\"1\\"]}}}}",
    "service": "mail",
    "session": "d41d8cd98f00b204e9800998ecf8427e",
  },
  Object {
    "body": Object {
      "subscription": "{\\"endpoint\\":\\"\\",\\"expirationTime\\":null,\\"keys\\":{\\"p26dh\\":\\"BB\\",\\"auth\\":\\"BRQ\\"}}",
    },
  },
]
`;

exports[`do-push-subscribe request non empty tabs and folders 1`] = `
Array [
  "/v2/subscribe/webpush",
  Object {
    "filter": "{\\"rules\\":[{\\"if\\":\\"NewMessage & Inbox & Tabs\\",\\"do\\":\\"send_bright\\"},{\\"if\\":\\"NewMessage & InboxFolders\\",\\"do\\":\\"send_bright\\"},{\\"do\\":\\"skip\\"}],\\"vars\\":{\\"NewMessage\\":{\\"$event\\":[\\"insert\\"]},\\"InboxFolders\\":{\\"fid\\":{\\"$eq\\":[\\"123\\"]}},\\"Tabs\\":{\\"tab\\":{\\"$eq\\":[\\"news\\"]}},\\"Inbox\\":{\\"fid\\":{\\"$eq\\":[\\"1\\"]}}}}",
    "service": "mail",
    "session": "d41d8cd98f00b204e9800998ecf8427e",
  },
  Object {
    "body": Object {
      "subscription": "{\\"endpoint\\":\\"\\",\\"expirationTime\\":null,\\"keys\\":{\\"p26dh\\":\\"BB\\",\\"auth\\":\\"BRQ\\"}}",
    },
  },
]
`;

exports[`do-push-subscribe success request for subscribing (no tabs) 1`] = `
Array [
  "/v2/subscribe/webpush",
  Object {
    "filter": "{\\"rules\\":[{\\"if\\":\\"NewMessage & Inbox & Tabs\\",\\"do\\":\\"send_bright\\"},{\\"if\\":\\"NewMessage & InboxFolders\\",\\"do\\":\\"send_bright\\"},{\\"do\\":\\"skip\\"}],\\"vars\\":{\\"NewMessage\\":{\\"$event\\":[\\"insert\\"]},\\"InboxFolders\\":{\\"fid\\":{\\"$eq\\":[\\"132\\",\\"133\\",\\"135\\"]}},\\"Tabs\\":{\\"tab\\":{\\"$eq\\":[\\"\\"]}},\\"Inbox\\":{\\"fid\\":{\\"$eq\\":[\\"1\\"]}}}}",
    "service": "mail",
    "session": "d41d8cd98f00b204e9800998ecf8427e",
  },
  Object {
    "body": Object {
      "subscription": "{\\"endpoint\\":\\"\\",\\"expirationTime\\":null,\\"keys\\":{\\"p26dh\\":\\"BB\\",\\"auth\\":\\"BRQ\\"}}",
    },
  },
]
`;

exports[`do-push-subscribe success request for subscribing (with tabs) 1`] = `
Array [
  "/v2/subscribe/webpush",
  Object {
    "filter": "{\\"rules\\":[{\\"if\\":\\"NewMessage & Inbox & Tabs\\",\\"do\\":\\"send_bright\\"},{\\"if\\":\\"NewMessage & InboxFolders\\",\\"do\\":\\"send_bright\\"},{\\"do\\":\\"skip\\"}],\\"vars\\":{\\"NewMessage\\":{\\"$event\\":[\\"insert\\"]},\\"InboxFolders\\":{\\"fid\\":{\\"$eq\\":[\\"132\\",\\"133\\",\\"135\\"]}},\\"Tabs\\":{\\"tab\\":{\\"$eq\\":[\\"relevant\\",\\"news\\"]}},\\"Inbox\\":{\\"fid\\":{\\"$eq\\":[\\"1\\"]}}}}",
    "service": "mail",
    "session": "d41d8cd98f00b204e9800998ecf8427e",
  },
  Object {
    "body": Object {
      "subscription": "{\\"endpoint\\":\\"\\",\\"expirationTime\\":null,\\"keys\\":{\\"p26dh\\":\\"BB\\",\\"auth\\":\\"BRQ\\"}}",
    },
  },
]
`;
